# ACES

./: ACES.cpp  ACES.h  ACES.pro  ACES.ui  CMakeLists.txt  README.md  differenceItem.cpp  differenceItem.h  differenceLocations.cpp  differenceLocations.h  endForm.cpp  endForm.h  endForm.ui  main.cpp  measurementModule.cpp  measurementModule.h  readyForm.cpp  readyForm.h  readyForm.ui  resources.qrc  spotTheDiff.cpp  spotTheDiff.h  spotTheDiff.ui  tetris.pro  tetris.qrc  tetrisboard.cpp  tetrisboard.h  tetrispiece.cpp  tetrispiece.h  tetriswindow.cpp  tetriswindow.h
